# rustweb

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FEATURES.md  README.md  benchmark.sh  docker-compose.yml  docker-config.toml  install.sh  quick_test.py  rustweb.service  rustweb.toml  test_client.py  test_config.toml  test_results.json  uninstall.sh
.github/workflows/: ci.yml  codeql.yml  dependency-update.yml  release.yml
benches/: server_benchmarks.rs
sites/example/: index.html
src/: config.rs  config_reload.rs  lib.rs  logging.rs  main.rs  ssl_cert_gen.rs
src/compression/: mod.rs
src/config/: tests.rs
src/metrics/: mod.rs  prometheus.rs
src/proxy/: mod.rs
src/security/: mod.rs  tests.rs
src/server/: http2.rs  http3.rs  http_server.rs  mod.rs  request_handler.rs  response.rs  static_files.rs  tls.rs
ssl/: cert.pem  key.pem
static/: 400.html  403.html  404.html  405.html  429.html  500.html  502.html  503.html  504.html
tests/: integration_tests.rs
www/: index.html
www/test/: api.json  app.js  style.css
