[package]
name = "rustweb"
version = "0.1.0"
edition = "2021"
authors = ["RustWeb Contributors"]
description = "A high-performance HTTP server written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rustweb"
keywords = ["http", "server", "web", "nginx", "performance"]
categories = ["web-programming::http-server"]

[lib]
name = "rustweb"
path = "src/lib.rs"

[[bin]]
name = "rustweb"
path = "src/main.rs"

[dependencies]
# Async runtime and HTTP
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1.0"
h2 = "0.4"
h3 = "0.0.8"
h3-quinn = "0.0.10" 
quinn = "0.11"
quinn-proto = "0.11"

# TLS support
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
rcgen = "0.12"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Compression
flate2 = "1.0"
brotli = "3.4"
zstd = "0.13"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
bytes = "1.5"
mime_guess = "2.0"
mime = "0.3"
uuid = { version = "1.6", features = ["v4"] }
httpdate = "1.0"
urlencoding = "2.1"

# Performance and metrics
dashmap = "5.5"
prometheus = { version = "0.14", optional = true }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# System integration
libc = "0.2"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = ["metrics"]
metrics = ["prometheus"]
jemalloc = ["tikv-jemallocator"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true


# Optional jemalloc allocator for better performance
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }
